Fix detection of .kexi file types after recent change of mime database on Linux for SQLite type (2018-06-17)

Details: Add application/vnd.sqlite3 and application/x-vnd.kde.kexi to be sure everything is catch while detecting .kexi file types.
The change is apparently needed after this commit:

https://cgit.freedesktop.org/xdg/shared-mime-info/commit/freedesktop.org.xml.in?id=36a88b01f6ae90da35a2f6a072db159c84cea768

From https://cgit.freedesktop.org/xdg/shared-mime-info/tree/freedesktop.org.xml.in:
it's apparent that .kexi mime type still inherits from application/x-sqlite3 which is now only an alias:


<mime-type type="application/x-kexiproject-sqlite3">
    <_comment>Kexi database file-based project</_comment>
    <sub-class-of type="application/x-sqlite3"/>
    <glob pattern="*.kexi"/>
    <alias type="application/x-vnd.kde.kexi"/>

Also update the driver's autotest.

BUG:396999
FIXED-IN:3.2.0

Big thanks to therapon@netzero.com for extensive testing!

CCMAIL:therapon@netzero.com
CCMAIL:ville.skytta@iki.fi
CCMAIL:hadess@hadess.net
CCMAIL:teuf@gnome.org